GKE00568/new deployment/compliant_k8s_objects/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: gke00568-compliant-ns
  labels:
    app.kubernetes.io/name: nginx
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
